+ Доработка некоторых ошибок